spacing fixes - adjustments

--- a/wp-content/themes/architect-lj-block-editor/assets/styles/theme/_utility_classes.scss
+++ b/wp-content/themes/architect-lj-block-editor/assets/styles/theme/_utility_classes.scss
@@ -19,12 +19,12 @@
 
     .p-section,
     .is-style-p-section {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    @include media(laptop) {
+    // padding-top: 2rem;
+    // padding-bottom: 2rem;
+    // @include media(laptop) {
         padding-top: 4rem;
         padding-bottom: 4rem;
-    }
+    // }
     }
 
     .p-lg-section,
