--- a/wp-content/themes/architect-lj-block-editor/assets/styles/theme/twentytwentyone/assets/sass/05-blocks/media-text/_style.scss
+++ b/wp-content/themes/architect-lj-block-editor/assets/styles/theme/twentytwentyone/assets/sass/05-blocks/media-text/_style.scss
@@ -79,8 +79,11 @@ $mt-breakpoint-down: $media-text-breakpoint + '-only';
     }
 
     // Block Styles
-    &.is-style-twentytwentyone-border {
-        border: calc(3 * var(--separator--height)) solid
-            var(--global--color-border);
+
+    figure.wp-block-media-text__media img {
+        width: auto;
+        margin: 0 auto;
+        display: block;
     }
+
 }
